--- a/index.html
+++ b/index.html
@@ -11,35 +11,56 @@
             margin: 20px auto;
             width: 600px;
             background-color: #DEB887;
+            box-shadow: 0 2px 15px rgba(0, 0, 0, 0.3);
+            border: 1px solid #8B4513;
+            padding: 10px;
+            border-radius: 5px;
+            background-size: 40px 40px;
         }
         .cell {
             width: 40px;
             height: 40px;
-            border: 1px solid #000;
+            border: 1px solid rgba(0, 0, 0, 0.3);
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 30px;
             cursor: pointer;
             position: relative;
+            background: rgba(222, 184, 135, 0.7);
         }
         .cell::before {
             content: '';
             display: block;
-            width: 30px;
-            height: 30px;
+            width: 34px;
+            height: 34px;
             border-radius: 50%;
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            transition: all 0.2s ease;
         }
         .cell.X::before {
-            background-color: black;
+            background: radial-gradient(circle at 30% 30%, #666, #000);
+            box-shadow: 
+                2px 2px 4px rgba(0, 0, 0, 0.4),
+                inset -2px -2px 4px rgba(0, 0, 0, 0.8),
+                inset 2px 2px 4px rgba(255, 255, 255, 0.3);
         }
         .cell.O::before {
-            background-color: white;
-            border: 1px solid black;
+            background: radial-gradient(circle at 30% 30%, #fff, #eee);
+            border: 1px solid #999;
+            box-shadow: 
+                2px 2px 4px rgba(0, 0, 0, 0.2),
+                inset -2px -2px 4px rgba(0, 0, 0, 0.1),
+                inset 2px 2px 4px rgba(255, 255, 255, 0.8);
+        }
+        .cell:hover:not(.X):not(.O)::before {
+            content: '';
+            background-color: rgba(0, 0, 0, 0.1);
+            width: 34px;
+            height: 34px;
         }
         .status {
             text-align: center;
