[taiyu] add easy mode in mode selector

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
                 <label for="difficulty">难度选择：</label>
                 <select id="difficulty" class="setting-select">
                     <option value="normal">普通模式</option>
-                    <option value="hard">困难模式</option>
+                    <option value="hard">大师模式</option>
+                    <option value="easy">弱智模式</option>
                 </select>
             </div>
             <div class="setting-group">
