[taiyu] update panel selector style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div class="start-screen" id="startScreen">
-        <h1 class="panel-header">五子棋游戏</h1>
+        <h1 class="panel-header">五子棋</h1>
         <div class="game-settings">
             <div class="setting-group">
                 <label for="difficulty">难度选择：</label>
